# PokemonTrivia

./: .gitignore  README.md  Spacefile  main.py  pyproject.toml  requirements.txt
src/: __init__.py  logger.py
src/extensions/: __init__.py  api.py
src/utils/: paths.py
